<resources>
    <string name="app_name">Triathalon Registration App</string>
    <string name="txtTitle">Triathalon Registration</string>
    <string name="txtAthletes">Number of Athletes on Team</string>
    <string name="prompt">Select Group</string>
    <string name="description">Bicyclist Image</string>
    <string name="btnCost">COMPUTE COST</string>
    <string-array name="txtGroup">
        <item>Lake Placid</item>
        <item>Big Island Hawaii</item>
        <item>Miami</item>
    </string-array>
</resources>
