<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="139dp"
        android:text="@string/txtTitle"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAthletes"
        android:layout_width="328dp"
        android:layout_height="61dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="500dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtAthletes"
        android:inputType="number"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.513" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="100dp"
        android:entries="@array/txtGroup"
        android:prompt="@string/prompt"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/btnCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <Button
        android:id="@+id/btnCost"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:layout_marginTop="175dp"
        android:text="@string/btnCost"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGroup" />

    <ImageView
        android:id="@+id/imageBicyclists"
        android:layout_width="266dp"
        android:layout_height="149dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnCost"
        app:layout_constraintTop_toBottomOf="@+id/txtGroup"
        app:srcCompat="@drawable/bicycles" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="400dp"
        android:layout_marginLeft="400dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:textAppearance="@style/AppTheme"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btnCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCost" />

</androidx.constraintlayout.widget.ConstraintLayout>